deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: oip-es-dev
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: oip-es-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-es-dev
spec:
  selector:
    matchLabels:
      app: oip-es-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-es-dev
    spec:
      containers:
      - name: oip-es-dev
        image: socialalphaoip/elasticsearch-microservice:dev
        ports:
        - containerPort: 8080
---
